--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.35.0",
     "cookie-parser": "~1.4.4",
+    "datauri": "^4.1.0",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
@@ -20,6 +23,7 @@
     "mongoose": "^7.3.1",
     "mongoose-ttl": "^0.0.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.22",
     "redis": "^4.6.7"
   }
